[package]
name = "random-wiki"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.21.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
